--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -65,7 +65,7 @@
                     </label>
                 </fieldset>
                 
-                <button type="submit" class="submit">Send Message</button>
+                <button type="submit" class="btn">Send Message</button>
             </form>
         </div>
 
