--- a/wwr/index.html
+++ b/wwr/index.html
@@ -23,67 +23,53 @@
     </header>
     
     <main>
-        <div class="hero">
-            <img src="images/hero-main.jpg" alt="A group of four people with oars traversing a white-water river rapid">
-            <h1>Welcome to WhiteWater Rafting Co.</h1>
-            <h2>Where Every Rapid is a Story</h2>
+    <div class="hero">
+        <img src="images/hero-main.jpg" alt="A group of four people with oars traversing a white-water river rapid">
+        <h1>Welcome to WhiteWater Rafting Co.</h1>
+        <h2>Where Every Rapid is a Story</h2>
 
-            <div class="hero-newsletter">
-                <h3>Sign up for our newsletter!</h3>
-                <form action="#">
-                    <fieldset>
-                        <label for="fullname">Full Name:</label>
-                        <input type="text" name="fullname" id="fullname">
+        <div class="hero-newsletter">
+            <h3>Sign up for our newsletter!</h3>
+            <form action="#">
+                <fieldset>
+                    <label for="fullname">Full Name:</label>
+                    <input type="text" name="fullname" id="fullname">
 
-                        <label for="email">Email Address:</label>
-                        <input type="email" name="email" id="email">
+                    <label for="email">Email Address:</label>
+                    <input type="email" name="email" id="email">
 
-                        <button type="submit" class="submit">Subscribe</button>
-                    </fieldset>
-                </form>
+                    <button type="submit" class="btn">Subscribe</button>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
+    <div>
+        <section class="action-call">
+            <h2>Adventure Awaits!</h2>
+            <div>
+                <a href="trips.html" class="btn">Click Here or Below to Look at Available Trips</a>
             </div>
-        </div>
+        </section>
+    </div>
 
-        <div>
-            <section class="action-call">
-                <h2>Adventure Awaits!</h2>
-                <div>
-                    <a href="trips.html">
-                    <button>Click Here or Below to Look at Available Trips</button>
-                </div>
-                </a>
-            </section>
-        </div>
-
-        <div>
-            <section class="grid">
-                <div>
-                    <img src="images/rapid-tours.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
-                    <div>
-                        <a href="trips.html">
-                        <button>Whitewater Rapid Tours</button>
-                        </a>
-                    </div>
-                </div>
-                <div>
-                    <img src="images/river-tours.jpg" alt="A group of people in a raft going down a fairly calm river. Serene wilderness surrounds the river.">
-                    <div>
-                        <a href="trips.html">
-                        <button>River Tours</button>
-                        </a>
-                    </div>
-                </div>
-                <div>
-                    <img src="images/camping.jpg" alt="A tent, campfire, and hammock are set up in a serene location. The campsite overlooks a forest and a lake.">
-                    <div>
-                        <a href="trips.html">
-                        <button>Camping Sites</button>
-                        </a>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </main>
+    <div>
+        <section class="grid">
+            <div>
+                <img src="images/rapid-tours.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
+                <a href="trips.html" class="btn">Whitewater Rapid Tours</a>
+            </div>
+            <div>
+                <img src="images/river-tours.jpg" alt="A group of people in a raft going down a fairly calm river. Serene wilderness surrounds the river.">
+                <a href="trips.html" class="btn">River Tours</a>
+            </div>
+            <div>
+                <img src="images/camping.jpg" alt="A tent, campfire, and hammock are set up in a serene location. The campsite overlooks a forest and a lake.">
+                <a href="trips.html" class="btn">Camping Sites</a>
+            </div>
+        </section>
+    </div>
+</main>
 
     <footer class="foot">
         <p>&copy;2025 - WhiteWater Rafting Co. - Cameron Galloway</p>
