--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -58,10 +58,8 @@
         </section>
 
         <section class="action-call">
-            <h2>Want to book a trip?</h1>
-            <a href="contact.html">
-            <button>Contact us</button>
-            </a>
+            <h2>Want to book a trip?</h2>
+            <a href="contact.html" class="btn">Contact us</a>
         </section>
 
         <section class="trip-table">
