--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,7 +27,7 @@
             <img src="images/river-rafting-above.jpg" alt="An aerial view of a red river raft on a white-water river. There are five people inside the raft: four are wearing blue helmets, and one is wearing a yellow helmet. All five people are holding oars and appear to be rafting down the river.">
             <h1>WhiteWater Rafting Co.</h1>
             <article>
-                <h2>Our Mission</h2>
+                <h2 class="our-mission">Our Mission</h2>
                 <img src="images/happy-clients.jpg" alt="A photograph of eleven people. Five of them are wearing yellow vests, four are wearing red vests, and two are wearing orange vests. All of the people are wearing wetsuits of varying sizes and colors. Four of them are holding oars in their hands in varying positions.">
                 <p>At Whitewater Rafting Co., our purpose is to share the thrill of whitewater rafting while fostering a deep respect for nature and teamwork. We provide safe, unforgettable river adventures that connect people to the outdoors, inspire confidence, and create lasting memories—one rapid at a time.</p>
             </article>
