changed trips css

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -26,7 +26,7 @@
     <div class="hero">
         <img src="images/hero-main.jpg" alt="A group of four people with oars traversing a white-water river rapid">
         <h1>Welcome to WhiteWater Rafting Co.</h1>
-        <h2>Where Every Rapid is a Story</h2>
+        <h2 class="hero-h2">Where Every Rapid is a Story</h2>
 
         <div class="hero-newsletter">
             <h3>Sign up for our newsletter!</h3>
