--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -23,36 +23,42 @@
     </header>
     
     <main>
-        <section class="trip-title">
-            <div class="trip-title-img">
-                <img src="images/trip-complete.jpg" alt="An image of several people on rafts holding their oars in the air. They appear to have just finished a rafting trip and look pleased">
-            </div>
+        <section class="feature-trips">
+            <h2>Delivering Exceptional Trips, Every Single Time</h2>
 
-            <div class="trip-title-text">
-                <p>
-                    Ready for an unforgettable day on the river? Our guided rafting trips 
-                    blend excitement, scenery, and pure fun, giving you the perfect 
-                    adventure for families, friends, or solo explorers.
-                </p>
+            <div class="trip-title-content">
+                <div class="trip-title-img">
+                    <div class="feature-img"><img src="images/trip-complete.jpg" alt="An image of several people on rafts holding their oars in the air. They appear to have just finished a rafting trip and look pleased"></div>
+                </div>
+
+                <div class="trip-title-text">
+                    <p>
+                        Ready for an unforgettable day on the river? Our guided rafting trips
+                        blend excitement, scenery, and pure fun, giving you the perfect
+                        adventure for families, friends, or solo explorers.
+                    </p>
+                </div>
+
             </div>
         </section>
 
         <section class="trips">
+            <h2>Our Top Rafting Trips</h2>
             <div class="div-trips">
                 <article>
-                <img src="images/trip-3.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
-                <h2>Gauley River - West Virginia</h2>
-                <p>● Known for its intense rapids, especially during the “Gauley Season.”<br>● A top destination for adrenaline-packed whitewater rafting.</p>
+                    <img src="images/trip-3.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
+                    <h3>Gauley River - West Virginia</h3>
+                    <p>● Known for its intense rapids, especially during the “Gauley Season.”<br>● A top destination for adrenaline-packed whitewater rafting.</p>
                 </article>
                 <article>
-                <img src="images/trip-1.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
-                <h2>Colorado River - Arizona</h2>
-                <p>● Iconic trip through the Grand Canyon with dramatic rapids and stunning canyon views.<br>● Offers multi-day trips for adventure seekers.</p>
+                    <img src="images/trip-1.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
+                    <h3>Colorado River - Arizona</h3>
+                    <p>● Iconic trip through the Grand Canyon with dramatic rapids and stunning canyon views.<br>● Offers multi-day trips for adventure seekers.</p>
                 </article>
                 <article>
-                <img src="images/trip-2.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
-                <h2>Snake River - Idaho</h2>
-                <p>● Features thrilling rapids and scenic wilderness in North America’s deepest river gorge.<br>● Good mix of challenging rapids and calmer stretches.</p>
+                    <img src="images/trip-2.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
+                    <h3>Snake River - Idaho</h3>
+                    <p>● Features thrilling rapids and scenic wilderness in North America’s deepest river gorge.<br>● Good mix of challenging rapids and calmer stretches.</p>
                 </article>
             </div>
         </section>
